--- a/app/components/toolbar/toolbar.html
+++ b/app/components/toolbar/toolbar.html
@@ -1,8 +1,17 @@
-<div class="row">
-    <div class="eight columns">
-        <p>{{reservations.length}} seats reserved</p>
+<div class="toolbar">
+    <div class="row toolbar-top">
+        <div class="twelve columns">
+            <div class="six columns">
+            <p class="reservations-count">{{reservations.length}} seats - <strong>{{reservations | totalPrice}} {{currency}}</strong></p>
+        </div>
     </div>
-    <div class="four columns">
-        <p><a ng-show="reservations.length > 0" href="#/checkout">Checkout</a></p>
+    <div class="row toolbar-bottom">
+        <div class="twelve columns">
+            <p>
+                <a class="button button-primary" href="#/events">Select more seats</a>
+                <a class="button button-primary" ng-show="reservations.length > 0" href="#/checkout">Checkout & Reductions</a>
+                <a class="button button-primary" ng-show="reservations.length > 0" ng-click="cancel()">Cancel</a>
+            </p>
+        </div>
     </div>
 </div>
