--- a/app/app.css
+++ b/app/app.css
@@ -1,3 +1,12 @@
+.hide {
+    display: none;
+}
+
+#loading {
+    margin-left:auto;
+    margin-right:auto;
+}
+
 .event-list {
     margin-top:0.5em;
     list-style:none;
