--- a/app/customer.app.css
+++ b/app/customer.app.css
@@ -8,12 +8,9 @@
 }
 
 @media all and (max-width: 660px) {
-    .header a.button {
-        width:100%;
-    }
-
-    .header a.button {
+    .header-bottom a.button {
         display:block;
+        width:100%;
         margin:.2em;
     }
 }
