--- a/app/app.css
+++ b/app/app.css
@@ -98,7 +98,7 @@ input.ng-invalid.ng-touched {
     border-color:#998A00;
     border-width:2px;
     background:#FFF59B;
-    box-shadow: 0px 0px 8px 2px #aaa;
+    box-shadow: 0 0 8px 2px #aaa;
 }
 
 .hint {
