--- a/app/app.css
+++ b/app/app.css
@@ -25,13 +25,20 @@
 .item-list-row {
     padding:0.25em 0;
     list-style:none;
-    font-size:1.5em;
+    font-size:1.2em;
     border-bottom:1px solid #333;
 }
 
-.item-list-row a {
-    color:#333;
-    text-decoration:none;
+.item-list-row .text {
+    margin-top:0.5em;
+}
+
+.selected-item-list-row-summary {
+    font-weight:bold;
+}
+
+.item-list-row-details {
+    padding-left:0.5em;
 }
 
 .checkout-reservations li {
