--- a/app/app.css
+++ b/app/app.css
@@ -173,17 +173,15 @@ input.button.button-primary:hover, input.button.button-primary:focus, a.button.b
     border-color:#3a7;
     cursor: pointer;
     margin:0;
+    margin-bottom:.5em;
     font-size:1.5em;
-    padding:.1em;
-    height:2em;
+    padding:0em;
+    height:1.7em;
 }
 
 .checkout.button.button-primary:hover, .checkout.button.button-primary:focus {
     background-color:#195;
     border-color:#195;
-    font-size:1.5em;
-    padding:.1em;
-    height:2em;
 }
 
 input.checkout.button-primary[disabled], input.checkout.button[disabled], input.checkout.button-primary[disabled]:hover, input.checkout.button[disabled]:hover {
