Update braintree dropin, introduce basket

--- a/app/app.css
+++ b/app/app.css
@@ -135,11 +135,15 @@ select:focus, input[type=email]:focus, input[type=text]:focus, input[type=number
     border-color:#111;
 }
 
-input.ng-invalid.ng-touched {
+input.ng-invalid.ng-touched, .button.with-hint {
     border-color:#998A00;
     border-width:2px;
     background:#FFF59B;
     box-shadow: 0 0 8px 2px #aaa;
+}
+
+.button.with-hint {
+    margin-bottom:0;
 }
 
 .hint {
@@ -150,6 +154,10 @@ input.ng-invalid.ng-touched {
     background: #FFF59B;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+}
+
+.hint.blue {
+    background:#aaddFF;
 }
 
 .select-notification {
@@ -179,8 +187,8 @@ input.button.button-primary:hover, input.button.button-primary:focus, a.button.b
 }
 
 .checkout.button.button-primary {
-    background-color:#3a7;
-    border-color:#3a7;
+    /* background-color:#111;
+    border-color:#111; */
     cursor: pointer;
     margin:0;
     margin-bottom:.5em;
@@ -190,8 +198,8 @@ input.button.button-primary:hover, input.button.button-primary:focus, a.button.b
 }
 
 .checkout.button.button-primary:hover, .checkout.button.button-primary:focus {
-    background-color:#195;
-    border-color:#195;
+    /* background-color:#195;
+    border-color:#195; */
 }
 
 input.checkout.button-primary[disabled], input.checkout.button[disabled], input.checkout.button-primary[disabled]:hover, input.checkout.button[disabled]:hover {
